[project]
name = "rlane-libcli"
version = "1.0.3"
description = "Command line interface framework"
authors = [
    {name = "Russel Lane", email = "russel@rlane.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["argparse", "cli", "color", "markdown", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.10"
dependencies = [
    "ansicolors>=1.1.8",
    "argcomplete>=2.0.0",
    "tomli>=2.0.1"]

[project.urls]
Homepage = "https://github.com/russellane/libcli"

[project.optional-dependencies]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "flake8-bugbear>=22.4.25",
    "flake8-pydocstyle>=0.2.0",
    "flake8-pylint>=0.1.3",
    "flake8-pytest-style>=1.6.0",
    "flake8-simplify>=0.19.2",
    "flake8>=4.0.1",
    "isort>=5.10.1",
    "pytest-cov>=3.0.0",
    "pytest>=7.1.2",
    "toml>=0.10.2",
]

[tool.black]
line-length = "97"

[tool.isort]
line_length = "97"
profile = "black"

[tool.pylint.format]
max-line-length = "97"

[tool.pylint.messages_control]
enable = ["useless-suppression"]
fail-on = ["I0021"]             # useless-suppression

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D105",     # pep257 numpy google   # Missing docstring in magic method
    "D202",     # pep257 numpy google   # No blank lines allowed after function docstring
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

# vim: set ts=4 sw=4 et:
